--- a/demeter-ui/public/index.html
+++ b/demeter-ui/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Application de gestion de Les Vraies Richesses"
     />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Antic">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
