--- a/demeter-ui/public/index.html
+++ b/demeter-ui/public/index.html
@@ -9,7 +9,7 @@
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/appbutton.png" />
 
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Antic">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ovo">
